--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "communiteam front-end",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "repository": {
     "type": "git",
@@ -15,5 +18,10 @@
   "bugs": {
     "url": "https://github.com/SchoolOfCode/front-end-final-project-communiteam/issues"
   },
-  "homepage": "https://github.com/SchoolOfCode/front-end-final-project-communiteam#readme"
+  "homepage": "https://github.com/SchoolOfCode/front-end-final-project-communiteam#readme",
+  "dependencies": {
+    "next": "^10.0.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  }
 }
