--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/SchoolOfCode/front-end-final-project-communiteam#readme",
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
     "next": "^10.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
