--- a/package.json
+++ b/package.json
@@ -21,8 +21,13 @@
   "homepage": "https://github.com/SchoolOfCode/front-end-final-project-communiteam#readme",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
+    "dotenv": "^8.2.0",
+    "isomorphic-unfetch": "^3.1.0",
+    "knex": "^0.21.15",
     "next": "^10.0.3",
+    "pg": "^8.5.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "swr": "^0.3.11"
   }
 }
