--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   },
   "homepage": "https://github.com/SchoolOfCode/front-end-final-project-communiteam#readme",
   "dependencies": {
+    "@auth0/auth0-react": "^1.2.0",
     "@material-ui/core": "^4.11.2",
+    "express": "^4.17.1",
+    "express-openid-connect": "^2.1.0",
     "fg-loadcss": "^3.1.0",
     "isomorphic-unfetch": "^3.1.0",
     "next": "^10.0.3",
