--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 #quickstart file
 stuff-from-quickstar.js
 
+#dotenv
+.env
+
 # dependencies
 /node_modules
 /.pnp
@@ -35,3 +38,4 @@ yarn-error.log*
 
 # vercel
 .vercel
+
