--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   },
   "homepage": "https://github.com/SchoolOfCode/front-end-final-project-communiteam#readme",
   "dependencies": {
+    "@date-io/luxon": "^1.3.13",
     "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.2.10",
     "isomorphic-unfetch": "^3.1.0",
+    "luxon": "^1.25.0",
     "next": "^10.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
