--- a/package.json
+++ b/package.json
@@ -1,40 +1,42 @@
 {
-  "name": "front-end-final-project-communiteam",
-  "version": "1.0.0",
-  "description": "communiteam front-end",
-  "main": "index.js",
-  "scripts": {
-    "test": "test",
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/SchoolOfCode/front-end-final-project-communiteam.git"
-  },
-  "author": "communiteam",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/SchoolOfCode/front-end-final-project-communiteam/issues"
-  },
-  "homepage": "https://github.com/SchoolOfCode/front-end-final-project-communiteam#readme",
-  "dependencies": {
-    "@auth0/auth0-react": "^1.2.0",
-    "@date-io/luxon": "^1.3.13",
-    "@date-io/moment": "^1.3.13",
-    "@material-ui/core": "^4.11.2",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/pickers": "^3.2.10",
-    "@material-ui/system": "^4.11.2",
-    "express": "^4.17.1",
-    "express-openid-connect": "^2.1.0",
-    "fg-loadcss": "^3.1.0",
-    "isomorphic-unfetch": "^3.1.0",
-    "luxon": "^1.25.0",
-    "moment": "^2.29.1",
-    "next": "^10.0.3",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
-  }
+    "name": "front-end-final-project-communiteam",
+    "version": "1.0.0",
+    "description": "communiteam front-end",
+    "main": "index.js",
+    "scripts": {
+        "test": "jest",
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/SchoolOfCode/front-end-final-project-communiteam.git"
+    },
+    "author": "communiteam",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/SchoolOfCode/front-end-final-project-communiteam/issues"
+    },
+    "homepage": "https://github.com/SchoolOfCode/front-end-final-project-communiteam#readme",
+    "dependencies": {
+        "@auth0/auth0-react": "^1.2.0",
+        "@date-io/luxon": "^1.3.13",
+        "@date-io/moment": "^1.3.13",
+        "@material-ui/core": "^4.11.2",
+        "@material-ui/icons": "^4.11.2",
+        "@material-ui/pickers": "^3.2.10",
+        "@material-ui/system": "^4.11.2",
+        "@testing-library/jest-dom": "^5.11.8",
+        "@testing-library/react": "^11.2.3",
+        "babel-jest": "^26.6.3",
+        "express": "^4.17.1",
+        "express-openid-connect": "^2.1.0",
+        "fg-loadcss": "^3.1.0",
+        "isomorphic-unfetch": "^3.1.0",
+        "luxon": "^1.25.0",
+        "next": "^10.0.3",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1"
+    }
 }
