--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export"
   },
   "repository": {
     "type": "git",
