--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "moment": "^2.29.1",
     "next": "^10.0.3",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "remark-parse": "^9.0.0",
+    "remark-react": "^8.0.0",
+    "unified": "^9.2.0"
   }
 }
