--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next-mdx-remote": "^2.1.1",
     "next-remote-watch": "^0.3.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "remark-gfm": "^1.0.0"
   }
 }
