--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "react-dom": "^17.0.1",
     "remark-parse": "^9.0.0",
     "remark-react": "^8.0.0",
-    "unified": "^9.2.0"
+    "unified": "^9.2.0",
     "react-share": "^4.3.1"
   }
 }
